    * tbl_replace.php: missing number of rows for Affected rows
      and Inserted rows; wrong message for insert ids
    * libraries/display_tbl.lib.php: bug 857743, SHOW DATABASES

2003-12-11 Alexander M. Turek  <bleibtallesanders@derrabus.de>
    * server_collations.php, lang/*.inc.php, libraries/mysql_charsets.lib.php:
      Updated character sets overview for MySQL 4.1.1.

2003-12-11 Garvin Hicking <me@supergarv.de>
    * header_printview.inc.php: RFE #856503, show number of rows in printview
    * tbl_change.php, tbl_replace.php, tbl_replace_fields.php: Fixed #857445, 
      #857684 where non-existant fields caused PHP notices.
    * db_details.php: Removed unneccessary whitespace
    * sql.php: Bug #857742: When dropping the only remaining database, an
      error occured. Fixed by checking if databases remein (as suggested
      by lem9)

2003-12-10 Garvin Hicking <me@supergarv.de>
    * db_datadict.php: Bug 857186: Real fix for the problem. The '@'
      delimiter slipped to the replacement's end instead of the expression's
      end.
    * db_details_structure.php: Bug 857315 - short open tag fixed

2003-12-09 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.data.php: bug 854702: FORCE INDEX
    * main.php: bug 851564: backquotes on the wildcard dbname
      when no controluser is defined
    * db_datadict.php: bug 857186: ENUMs and data dictionary,
      thanks to Andrew Weiner (landreww) for the report and fix

2003-12-09 Garvin Hicking <embatag@supergarv.de>
    * tbl_change.php: Fixed Bug #856436 (not displaying default values)
    * lang/german*: Translations
    * left.php: Escape single quotes in single-table cases as well
      (Bug #855771)

2003-12-08 Marc Delisle  <lem9@users.sourceforge.net>
    * new language: basque, thanks to Axier Lopez (axierl@euskalerria.org)

2003-12-07 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.5.5-rc1 released

2003-12-06 Marc Delisle  <lem9@users.sourceforge.net>